--- a/finfaktura/ui/faktura.ui
+++ b/finfaktura/ui/faktura.ui
@@ -585,7 +585,7 @@
                       </size>
                      </property>
                      <property name="pixmap">
-                      <pixmap resource="../../faktura.qrc">:/pix/cross.svg</pixmap>
+                      <pixmap resource="../../faktura.qrc">pix:cross.svg</pixmap>
                      </property>
                      <property name="scaledContents">
                       <bool>true</bool>
@@ -1099,7 +1099,7 @@
                     <string/>
                    </property>
                    <property name="pixmap">
-                    <pixmap resource="../../faktura.qrc">:/pix/cross.svg</pixmap>
+                    <pixmap resource="../../faktura.qrc">pix:cross.svg</pixmap>
                    </property>
                    <property name="scaledContents">
                     <bool>true</bool>
@@ -1431,7 +1431,7 @@
                     <string/>
                    </property>
                    <property name="pixmap">
-                    <pixmap resource="../../faktura.qrc">:/pix/cross.svg</pixmap>
+                    <pixmap resource="../../faktura.qrc">pix:cross.svg</pixmap>
                    </property>
                    <property name="scaledContents">
                     <bool>true</bool>
